force-app/main/default/objects/Drop__c/Drop__c.object-meta.xml
<CustomObject>
    <label>Drop</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drop Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>