force-app/main/default/objects/Drop__c/fields/TotalDrop__c.field-meta.xml
<CustomField>
    <fullName>TotalDrop__c</fullName>
    <formula>X100__c * 100 +
 X50__c * 50 +
 X20__c * 20 +
 X10__c * 10 +
 X5__c * 5 +
 X2__c * 2 +
 X1__c * 1 +
 X025__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Drop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>