force-app/main/default/objects/Drop__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <summarizedField>DropDenomination__c.Value__c</summarizedField>
    <summaryForeignKey>DropDenomination__c.Drop__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>