force-app/main/default/objects/Drop__c/fields/X025__c.field-meta.xml
<CustomField>
    <fullName>X025__c</fullName>
    <label>$0.25</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>